[tool.poetry]
name = "qtools-api"
version = "0.1.0"
description = ""
authors = ["harshraj2717 <harshraj2717@gmail.com>"]
readme = "README.md"
packages = [{include = "api_server"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.3"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"
requests = "^2.31.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"